5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1575_1559.log
== TEST (2019-03-13 22:45:18) 
-- CODE:
frase = ""
print(frase.Ada Lovelace foi a primeira programadora da historia.uper())
-- ERROR:
File "XXXX", line 2
    print(frase.Ada Lovelace foi a primeira programadora da historia.uper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:45:25) 
-- CODE:
frase = ""
print(frase. Ada Lovelace foi a primeira programadora da historia.uper())
-- ERROR:
File "XXXX", line 2
    print(frase. Ada Lovelace foi a primeira programadora da historia.uper())
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:45:46) 
-- CODE:
frase = ""
print(frase. Ada Lovelace foi a primeira programadora da historia uper)
-- ERROR:
File "XXXX", line 2
    print(frase. Ada Lovelace foi a primeira programadora da historia uper)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:48:14) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:48:16) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.205636
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
